...
    onClick: (Int) -> Unit = {},
) {
    val s = AppTheme.spacing
    Column(
        modifier = modifier
            .fillMaxWidth()
            .testTag("album_tile")
            .semantics {
                contentDescription = album.name
            }
            .clickable(onClick = { onClick(album.albumId) }),
        verticalArrangement = Arrangement.spacedBy(s.sm),
    ) {
...
